--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "next": "15.0.3",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sentiment": "^5.0.2"
   },
   "devDependencies": {
     "postcss": "^8",
